--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 标题
+title: 林奕铭的个人博客
 subtitle: ''
-description: 描述
-keywords: 关键词
-author: 作者名
+description: 无限进步
+keywords: 测试
+author: 林奕铭
 language: zh-CN
-timezone: ''
+timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
@@ -97,12 +97,12 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: kaze
+theme: butterfly
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: 你的代码仓库
+  repo: https://github.com/k1ngr4m/k1ngr4m.github.io.git
   branch: html
   message: blog
