--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -7,7 +7,7 @@ menu:
  Archives: /archives/ || fas fa-archive
  Tags: /tags/ || fas fa-tags
  Categories: /categories/ || fas fa-folder-open
- List||fas fa-list:
+ List||fas fa-list||hide:
    Music: /music/ || fas fa-music
    Movie: /movies/ || fas fa-video
  Link: /link/ || fas fa-link
@@ -21,7 +21,7 @@ nav:
 # Code Blocks (代碼相關)
 # --------------------------------------
 
-highlight_theme: light #  darker / pale night / light / ocean / mac / mac light / false
+highlight_theme: darker #  darker / pale night / light / ocean / mac / mac light / false
 highlight_copy: true # copy button
 highlight_lang: true # show the code language
 highlight_shrink: false # true: shrink the code blocks / false: expand the code blocks | none: expand code blocks and hide the button
@@ -42,6 +42,7 @@ copy:
 social:
  fab fa-github: https://github.com/k1ngr4m || Github
  fas fa-envelope: mailto:qcuikeda@vip.qq.com || Email
+ fa-brands fa-weibo: https://weibo.com/u/3206692267 || Weibo
 
 # search (搜索)
 # see https://butterfly.js.org/posts/ceeb73f/#搜索系統
