--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -102,22 +102,24 @@ avatar:
 disable_top_img: false
 
 # The banner image of home page
-index_img: https://i.postimg.cc/gjs9ybKQ/00000-851497847.png
+index_img: 'linear-gradient(20deg, #0062be, #925696, #cc426e, #fb0347)'
 
 # If the banner of page not setting, it will show the top_img
 default_top_img:
 
 # The banner image of archive page
-archive_img:
+archive_img: 'linear-gradient(20deg, #0062be, #925696, #cc426e, #fb0347)'
 
 # If the banner of tag page not setting, it will show the top_img
 # note: tag page, not tags page (子標籤頁面的 top_img)
-tag_img:
+tag_img: 'linear-gradient(20deg, #0062be, #925696, #cc426e, #fb0347)'
 
 # The banner image of tag page
 # format:
 #  - tag name: xxxxx
 tag_per_img:
+#  aplayer: https://i.postimg.cc/xCr26Gb2/IMG-0286.jpg
+#  android: ddddddd.png
 
 # If the banner of category page not setting, it will show the top_img
 # note: category page, not categories page (子分類頁面的 top_img)
