04/01 update: 修改配置文件

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 林奕铭的个人博客
+title: K1ngr4m
 subtitle: ''
 description: 无限进步
 keywords: 测试
