04/01 update: 修改配置文件

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -58,9 +58,15 @@ algolia_search:
 
 # Local search
 local_search:
-  enable: false
-  preload: false
+  enable: true
+  preload: true
   CDN:
+
+search:
+ path: search.xml
+ field: post
+ content: true
+ template: ./search.xml
 
 # Docsearch
 # https://docsearch.algolia.com/
