--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -697,7 +697,7 @@ aside:
       enable: true
       icon: fab fa-github
       text: Follow Me
-      link: https://github.com/xxxxxx
+      link: https://github.com/k1ngr4m
   card_announcement:
     enable: true
     content: This is my Blog
