--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -45,6 +45,7 @@ social:
  fab fa-github: https://github.com/k1ngr4m || Github
  fas fa-envelope: mailto:qcuikeda@vip.qq.com || Email
  fa-brands fa-weibo: https://weibo.com/u/3206692267 || Weibo
+ fa-brands fa-bilibili: https://space.bilibili.com/10701705 || Bilibili
 
 # search (搜索)
 # see https://butterfly.js.org/posts/ceeb73f/#搜索系統
