--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -111,7 +111,8 @@ avatar:
 disable_top_img: false
 
 # The banner image of home page
-index_img: https://s1.ax1x.com/2023/04/01/ppWV97F.png
+#index_img: https://s1.ax1x.com/2023/04/01/ppWV97F.png
+index_img: source/_pics/background.png
 
 # If the banner of page not setting, it will show the top_img
 default_top_img: 'linear-gradient(20deg, #0062be, #925696, #cc426e, #fb0347)'
