--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -215,7 +215,7 @@ toc:
   scroll_percent: true
 
 post_copyright:
-  enable: true
+  enable: false
   decode: false
   author_href:
   license: CC BY-NC-SA 4.0
